--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,30 @@ jobs:
         mv HOY/hoy MOEAFramework-${VERSION}
         pushd MOEAFramework-${VERSION}
 
-        inputs=(DTLZ2.2D.pf DTLZ2.4D.pf DTLZ2.6D.pf DTLZ2.8D.pf)
+        inputs=(DTLZ2.2D.pf DTLZ2.4D.pf DTLZ2.6D.pf)
         function timer() { ts=$(date +%s%N); $@; echo $((($(date +%s%N) - $ts)/1000000)); }
+
+        echo "Built-in..."
+        printf "" > moeaframework.properties
+
+        for input in $inputs
+        do
+          echo "    > $input: $(timer java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
+        done
 
         echo "WFG (Variant 2)..."
         printf "org.moeaframework.core.indicator.hypervolume = ./wfg2 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
         
         for input in $inputs
         do
-          echo "    > $input: $(timer java -cp "lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
+          echo "    > $input: $(timer java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
+        done
+
+        echo ""
+        echo "HOY..."
+        printf "org.moeaframework.core.indicator.hypervolume = ./hoy {0} {1} {2} {3}\norg.moeaframework.core.indicator.hypervolume_inverted = false" > moeaframework.properties
+        
+        for input in $inputs
+        do
+          echo "    > $input: $(timer java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
         done
