--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,29 +28,30 @@ jobs:
         pushd MOEAFramework-${VERSION}
 
         inputs=(DTLZ2.2D.pf DTLZ2.4D.pf DTLZ2.6D.pf)
-        function timer() { ts=$(date +%s%N); $@; echo $((($(date +%s%N) - $ts)/1000000)); }
+
+        function test() {
+          ts=$(date +%s%N)
+          hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume "./pf/$1")
+          et=$((($(date +%s%N) - $ts)/1000000))
+          echo "    $hv ($et ms)"
+        }
+
+        function test_all() {
+          for input in ${inputs[@]}
+          do
+            test "$input"
+          done
+        }
 
         echo "Built-in..."
         printf "" > moeaframework.properties
-
-        for input in $inputs
-        do
-          echo "    > $input: $(timer java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
-        done
+        test_all
 
         echo "WFG (Variant 2)..."
         printf "org.moeaframework.core.indicator.hypervolume = ./wfg2 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
-        
-        for input in $inputs
-        do
-          echo "    > $input: $(timer java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
-        done
+        test_all
 
         echo ""
         echo "HOY..."
         printf "org.moeaframework.core.indicator.hypervolume = ./hoy {0} {1} {2} {3}\norg.moeaframework.core.indicator.hypervolume_inverted = false" > moeaframework.properties
-        
-        for input in $inputs
-        do
-          echo "    > $input: $(timer java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume ./pf/$input)"
-        done
+        test_all
