--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,24 @@ jobs:
     - uses: actions/checkout@v3
     - name: Compile HOY
       run: |
-        pushd HOY
+        cd HOY
         make
     - name: Compile WFG
       run: |
-        pushd WFG
+        cd WFG
         make
-    - name: Compare Timings
+    - name: Setup timings
       run: |
         VERSION=$(curl https://api.github.com/repos/MOEAFramework/MOEAFramework/releases/latest | jq '.tag_name' | grep -oEi '[0-9]+\.[0-9]+(\.[0-9]+)?')
         wget https://github.com/MOEAFramework/MOEAFramework/releases/download/v${VERSION}/MOEAFramework-${VERSION}.tar.gz
         tar -xzf MOEAFramework-${VERSION}.tar.gz
+        mv MOEAFramework-${VERSION} MOEAFramework-Latest
         
-        mv WFG/wfg2 MOEAFramework-${VERSION}
-        mv HOY/hoy MOEAFramework-${VERSION}
-        pushd MOEAFramework-${VERSION}
+        mv WFG/wfg2 MOEAFramework-Latest
+        mv HOY/hoy MOEAFramework-Latest
+    - name: Run timings
+      run: |
+        cd MOEAFramework-Latest
 
         inputs=(DTLZ2.2D.pf DTLZ2.4D.pf DTLZ2.6D.pf)
 
