--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,17 @@ jobs:
 
         function test() {
           ts=$(date +%s%N)
-          hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume "./pf/$1")
+          eps=0.01
+
+          if echo "$input" | grep ".4D."; then
+            eps=0.15
+          elif echo "$input" | grep ".6D."; then
+            eps=0.25
+          elif echo "$input" | grep ".8D."; then
+            eps=0.35
+          fi
+
+          hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume -e "$eps" "./pf/$1")
           et=$((($(date +%s%N) - $ts)/1000000))
           echo "    $hv ($et ms)"
         }
@@ -50,6 +60,7 @@ jobs:
         printf "" > moeaframework.properties
         test_all
 
+        echo ""
         echo "WFG (Variant 2)..."
         printf "org.moeaframework.core.indicator.hypervolume = ./wfg2 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
         test_all
