--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
       run: |
         cd WFG
         make
+    - name: Download and compile HV
+      run: |
+        wget https://lopez-ibanez.eu/files/hv-2.0rc2-src.tar.gz
+        tar -xzf hv-2.0rc2-src.tar.gz
+        make
+        ls .
     - name: Setup timings
       run: |
         VERSION=$(curl https://api.github.com/repos/MOEAFramework/MOEAFramework/releases/latest | jq '.tag_name' | grep -oEi '[0-9]+\.[0-9]+(\.[0-9]+)?')
@@ -26,6 +32,7 @@ jobs:
         
         mv WFG/wfg2 MOEAFramework-Latest
         mv HOY/hoy MOEAFramework-Latest
+        mv hv-2.0rc2/hv MOEAFramework-Latest
     - name: Run timings
       run: |
         cd MOEAFramework-Latest
