Rerun tests a few times

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,11 @@ jobs:
             eps=0.25
           fi
 
-          hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume -e "$eps" "./pf/$1")
+          for i in ${1 .. 5}
+          do
+            hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume -e "$eps" "./pf/$1")
+          done
+
           et=$((($(date +%s%N) - $ts)/1000000))
           echo "    $hv ($et ms)"
         }
