--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         cd MOEAFramework-Latest
 
-        inputs=(DTLZ2.2D.pf DTLZ2.3D.pf DTLZ2.4D.pf DTLZ2.6D.pf)
+        inputs=(DTLZ2.2D.pf DTLZ2.3D.pf DTLZ2.4D.pf DTLZ2.6D.pf DTLZ2.8D.pf)
 
         function test() {
           ts=$(date +%s%N)
@@ -49,7 +49,7 @@ jobs:
           elif echo "$input" | grep ".6D." > /dev/null; then
             eps=0.15
           elif echo "$input" | grep ".8D." > /dev/null; then
-            eps=0.25
+            eps=0.3
           fi
 
           for i in {1..5}
@@ -70,7 +70,7 @@ jobs:
 
         echo "Built-in..."
         printf "" > moeaframework.properties
-        test_all
+        #test_all
 
         echo ""
         echo "WFG (Variant 2)..."
