--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,10 @@ jobs:
         tar -xzf MOEAFramework-${VERSION}.tar.gz
         mv MOEAFramework-${VERSION} MOEAFramework-Latest
         
+        mv WFG/wfg0 MOEAFramework-Latest
+        mv WFG/wfg1 MOEAFramework-Latest
         mv WFG/wfg2 MOEAFramework-Latest
+        mv WFG/wfg3 MOEAFramework-Latest
         mv HOY/hoy MOEAFramework-Latest
         mv hv-1.3-src/hv MOEAFramework-Latest/hv1.3
         mv hv-2.0rc1-src/hv MOEAFramework-Latest/hv2.rc1
@@ -85,12 +88,28 @@ jobs:
         #echo "Built-in..."
         #printf "" > moeaframework.properties
         #test_all
+        
+        echo ""
+        echo "WFG (Variant 0)..."
+        printf "org.moeaframework.core.indicator.hypervolume = ./wfg0 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
+        test_all
+        
+        echo ""
+        echo "WFG (Variant 1)..."
+        printf "org.moeaframework.core.indicator.hypervolume = ./wfg1 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
+        test_all
 
         echo ""
         echo "WFG (Variant 2)..."
         printf "org.moeaframework.core.indicator.hypervolume = ./wfg2 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
         test_all
+        
+        echo ""
+        echo "WFG (Variant 3)..."
+        printf "org.moeaframework.core.indicator.hypervolume = ./wfg3 {2}\norg.moeaframework.core.indicator.hypervolume_inverted = true" > moeaframework.properties
+        test_all
 
+        # Need to investigate, this is taking really long and something might have broke...
         #echo ""
         #echo "HOY..."
         #printf "org.moeaframework.core.indicator.hypervolume = ./hoy {0} {1} {2} {3}\norg.moeaframework.core.indicator.hypervolume_inverted = false" > moeaframework.properties
