--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,19 +69,19 @@ jobs:
 
         function test() {
           ts=$(date +%s%N)
-          #eps=0.01
+          eps=0.01
 
-          #if echo "$input" | grep ".4D." > /dev/null; then
-          #  eps=0.05
-          #elif echo "$input" | grep ".6D." > /dev/null; then
-          #  eps=0.1
-          #elif echo "$input" | grep ".8D." > /dev/null; then
-          #  eps=0.2
-          #fi
+          if echo "$input" | grep ".4D." > /dev/null; then
+            eps=0.05
+          elif echo "$input" | grep ".6D." > /dev/null; then
+            eps=0.1
+          elif echo "$input" | grep ".8D." > /dev/null; then
+            eps=0.2
+          fi
 
           for i in $(seq 1 $trials)
           do
-            hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume "./pf/$1")
+            hv=$(java -cp ".:lib/*" org.moeaframework.analysis.sensitivity.SetHypervolume -e "$eps" "./pf/$1")
           done
 
           et=$((($(date +%s%N) - $ts)/1000000))
