--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         ant package-binary
         cd dist
         tar -xzf MOEAFramework-${VERSION}.tar.gz
-        mv MOEAFramework-${VERSION}.tar.gz ../../MOEAFramework-Latest
+        mv MOEAFramework-${VERSION} ../../MOEAFramework-Latest
     - name: Setup executables
       run: |
         mv WFG/wfg2 MOEAFramework-Latest
